<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MVPTest</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="save">存</string>
    <string name="load">读</string>
    <string name="id">ID:</string>
    <string name="firstname">FirstName:</string>
    <string name="lastname">LastName:</string>

</resources>